fix: support deploying to a namespace other than default
Signed-off-by: Harikrishnan Balagopal <harikrishmenon@gmail.com>

--- a/frontend/packages/console-shared/locales/en/console-shared.json
+++ b/frontend/packages/console-shared/locales/en/console-shared.json
@@ -117,7 +117,7 @@
   "View property descriptions": "View property descriptions",
   "Save": "Save",
   "View shortcuts": "View shortcuts",
-  "Enter any prompt and get YAML snippet back!": "Enter any prompt and get YAML snippet back!",
+  "Enter the query for YAML assistance": "Enter the query for YAML assistance",
   "Submit": "Submit",
   "Unable to translate": "Unable to translate",
   "Preview": "Preview",
